[gd_scene load_steps=8 format=3 uid="uid://4oqp8w4q1nhf"]

[ext_resource type="Script" uid="uid://drixbc6h6wkjo" path="res://entities/enemy/enemy.gd" id="1_im2q6"]
[ext_resource type="Texture2D" uid="uid://df7mgfvue7pvb" path="res://entities/enemy/enemy_medium.png" id="1_ksmh7"]
[ext_resource type="PackedScene" uid="uid://bbx7m03mkqsce" path="res://components/health_component.tscn" id="2_3fvr7"]
[ext_resource type="PackedScene" uid="uid://cagdrvllq4n4q" path="res://components/hurtbox_component.tscn" id="3_dt443"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_im2q6"]
properties/0/path = NodePath(".:global_position")
properties/0/spawn = true
properties/0/replication_mode = 1

[sub_resource type="CircleShape2D" id="CircleShape2D_ksmh7"]
radius = 4.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4wwj3"]
size = Vector2(16, 24)

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 0
motion_mode = 1
script = ExtResource("1_im2q6")

[node name="HealthComponent" parent="." instance=ExtResource("2_3fvr7")]
max_health = 2

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_im2q6")

[node name="TargetAquisitionTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_ksmh7")

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("3_dt443")]
position = Vector2(0, -11)
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_4wwj3")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_ksmh7")
centered = false
offset = Vector2(-8, -23)
